--- a/01_Live_Server.html
+++ b/01_Live_Server.html
@@ -13,5 +13,6 @@
     And then code is reflected press enter and automatic code is generated.
     Now I have given title as Live Server in the Head and in the body i gave a heading and a pragraph.
     </p>
+    <p>This is a modification in 2nd branch</p>
 </body>
 </html>
