--- a/01_Live_Server.html
+++ b/01_Live_Server.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Setting Up Live Server</h1>
     <p>I have created a folder called CLASS and the created a html file in it. 
-    To get automatic basic code with a doctype I gave a ! 
-    And then code is reflected press enter and automatic code is generated.
+    <strong>To get automatic basic code with a doctype I gave a !</strong><hr>
+    And then code is reflected press enter and automatic code is generated.<hr>
     Now I have given title as Live Server in the Head and in the body i gave a heading and a pragraph.
     </p>
     <p>This is a modification in 2nd branch</p>
