--- a/02_Practice.html
+++ b/02_Practice.html
@@ -12,6 +12,7 @@
     <img src="C:\Users\srinu\Downloads\a girl with hat.jpg" style="width:10%">
     <p style="color:blue;">trying to give a color to the text</p><br>
     <p style="background-color:orange;">giving background color</p>
-
+    <p style="font-family:verdana;">giving font style to the text</p>
+    <p style="font-size:120%;">giving size to the font.</p>
 </body>
 </html>
