--- a/03_Practice.html
+++ b/03_Practice.html
@@ -11,7 +11,46 @@
     <p>This is a learning page of HTML and CSS</p>
     <p>This <abbr title="Learning Page">LP</abbr>is created by me</p>
     <img src="C:\Users\srinu\Downloads\a girl with hat.jpg" style="width:10%">
-    
-
+    <ul>
+        <li>Mockup
+            <ol>
+                <li>Design_1</li>
+                <li>Design_2</li>
+            </ol>
+        </li>
+        <li>MockUp_1
+            <ol>
+                <li>Type_1</li>
+                <li>Type_2</li>
+            </ol>
+        </li>
+    </ul>
+    <hr>
+    <h4>Designing a Table</h4>
+    <table style="width: 50%;" border="color:black">
+        <thead>
+            <tr>
+                <th>No.of MockUp</th>
+                <th>Design Type</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Mockup_1</td>
+                <td>Design in draw.io</td>
+            </tr>
+            <tr>
+                <td>Mockup_2</td>
+                <td>Design_1</td>
+            </tr>
+        </tbody>
+    </table>
+    <p>Created a table with some sample data.</p>
+    <hr>
+    <h4>Forms and Input</h4>
+    <form>
+        <label for="fname">Name</label><br>
+        <input type="text" name="fname" id="fname" placeholder="First Name">
+    </form>
 </body>
 </html>
