--- a/03_Practice.html
+++ b/03_Practice.html
@@ -49,8 +49,10 @@
     <hr>
     <h4>Forms and Input</h4>
     <form>
-        <label for="fname">Name</label><br>
-        <input type="text" name="fname" id="fname" placeholder="First Name">
+        <label for="fname">First Name</label><br>
+        <input type="text" name="fname" id="fname" placeholder="Enter First Name"><br>
+        <label for="lname">Last Name</label><br>
+        <input type="text" name="lname" id="lname" placeholder="Enter Last Name">
     </form>
 </body>
 </html>
