--- a/04_MockUp.html
+++ b/04_MockUp.html
@@ -5,12 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        *{
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+        }
+        .wrapper{
+            background: url("images/JP.jpg") no-repeat cover;
+            height: 100vh;
+        }
+    </style>
 </head>
 <body>
-    <div class="width:100% color:white">
-        <div class="text-color:black">
-            <a href="#home" class="w3-bar-item w3-button"><b>BR</b> Architects</a>
+    <header>
+        <div class="wrapper">
+
         </div>
-    </div>
+    </header>
 </body>
 </html>
